package lab2;

/**
 * Інтерфейс If3 успадковує If1.
 * Призначений для реалізації окремої гілки генералізації.
 * @author Artem Davydchuk
 * @version 1.0
 */

public interface If3 extends If1 {}